# purl

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  README.rst  TODO  makefile  pyproject.toml  pytest.ini  release.sh  requirements.txt  runtests.sh  setup.py  tox.ini
.github/workflows/: lint_python.yml  tox.yml
docs/: Makefile  build_docs.sh  conf.py  index.rst
purl/: __init__.py  template.py  tests.py  url.py
tests/: expansion_tests.py  template_tests.py  test_expansion.py  test_template.py  test_url.py  test_utils.py  tests.py  uritemplate_tests.py  url_tests.py  utils_tests.py
tests/features/: steps.py  templates.feature
