[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "purl"
author = "David Winterbottom"
author-email = "david.winterbottom@gmail.com"
home-page = "https://github.com/codeinthehole/purl"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.rst"
requires-python = ">=3.6"

